fix: :art: Fix Footer light/dark mode

--- a/src/shared/components/Footer/Footer.module.css
+++ b/src/shared/components/Footer/Footer.module.css
@@ -1,3 +1,15 @@
+/* ROOT */
+:root {
+  --dark-mode-elements: hsl(209, 23%, 22%);
+  --dark-mode-background: hsl(207, 26%, 17%);
+  --light-mode-text: hsl(207, 26%, 17%);
+  --light-mode-input: hsl(0, 0%, 52%);
+  --light-mode-background: hsl(0, 0%, 98%);
+  --dark-mode-text: hsl(0, 0%, 100%);
+}
+
+/* FOOTER */
+
 .footer {
   width: 100%;
   height: 3rem;
